--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1080,11 +1080,11 @@
         <td>Unlockable</td>
         <td>Wii Fit</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Sun Salutation<br/>
+          <b>Side:</b> Header<br/>
+          <b>Up:</b> Super Hoop<br/>
+          <b>Down:</b> Deep Breathing<br/>
+          <b>Final Smash:</b> Wii Fit
         </td>
       </tr>
       <tr>
@@ -1100,11 +1100,11 @@
         <td>Unlockable</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Luma Shot<br/>
+          <b>Side:</b> Star Bits<br/>
+          <b>Up:</b> Launch Star<br/>
+          <b>Down:</b> Gravitational Pull<br/>
+          <b>Final Smash:</b> Power Star
         </td>
       </tr>
       <tr>
@@ -1120,11 +1120,11 @@
         <td>Unlockable</td>
         <td>Punch-Out!!</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Straight Lunge<br/>
+          <b>Side:</b> Jolt Haymaker<br/>
+          <b>Up:</b> Rising Uppercut<br/>
+          <b>Down:</b> Slip Counter<br/>
+          <b>Final Smash:</b> Giga Mac
         </td>
       </tr>
       <tr>
