--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1140,11 +1140,11 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Water Shuriken<br/>
+          <b>Side:</b> Shadow Sneak<br/>
+          <b>Up:</b> Hydro Pump<br/>
+          <b>Down:</b> Substitute<br/>
+          <b>Final Smash:</b> Secret Ninja Attack
         </td>
       </tr>
       <tr>
@@ -1160,11 +1160,11 @@
         <td>Unlockable</td>
         <td>Super Smash Bros.</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Shot Put / Ultimate Uppercut / Exploding Side Kick<br/>
+          <b>Side:</b> Onslaught / Burning Dropkick / Headache Maker<br/>
+          <b>Up:</b> Soaring Axe Kick / Helicopter Kick / Piston Punch<br/>
+          <b>Down:</b> Head-On Assault / Feint Jump / Foot Flurry<br/>
+          <b>Final Smash:</b> Omega Blitz
         </td>
       </tr>
       <tr>
@@ -1180,11 +1180,11 @@
         <td>Unlockable</td>
         <td>Super Smash Bros.</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Gale Strike / Shuriken of Light / Blurring Blade<br/>
+          <b>Side:</b> Airborne Assault / Slash Launcher / Chakram<br/>
+          <b>Up:</b> Stone Scabbard / Skyward Slash Dash / Hero's Spin<br/>
+          <b>Down:</b> Blade Counter / Reversal Slash / Power Thrust<br/>
+          <b>Final Smash:</b> Final Edge
         </td>
       </tr>
       <tr>
@@ -1200,11 +1200,11 @@
         <td>Unlockable</td>
         <td>Super Smash Bros</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Charge Blast / Laser Blaze / Grenade Launch<br/>
+          <b>Side:</b> Flame Pillar / Stealth Burst / Gunner Missile<br/>
+          <b>Up:</b> Lunar Launch / Cannon Uppercut / Arm Rocket<br/>
+          <b>Down:</b> Echo Reflector / Bomb Drop / Absorbing Vortex<br/>
+          <b>Final Smash:</b> Full Blast
         </td>
       </tr>
       <tr>
