--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -148,7 +148,7 @@
           <b>Side:</b> Egg Roll<br/>
           <b>Up:</b> Egg Throw<br/>
           <b>Down:</b> Yoshi Bomb<br/>
-          <b>Final Smash:</b> Super Dragon
+          <b>Final Smash:</b> Super Dragon (<i>Brawl</i>, 3DS/Wii U)
         </td>
       </tr>
       <tr>
@@ -648,7 +648,7 @@
           <b>Side:</b> Drill Rush<br/>
           <b>Up:</b> Shuttle Loop<br/>
           <b>Down:</b> Dimensional Cape<br/>
-          <b>Final Smash:</b> Galaxia Darkness
+          <b>Final Smash:</b> Galaxia Darkness (<i>Brawl</i>, 3DS/Wii U); Darkness Illusion (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -668,7 +668,8 @@
           <b>Side:</b> Angel Ring (<i>Brawl</i>); Upperdash Arm (3DS/Wii U onward)<br/>
           <b>Up:</b> Wings of Icarus (<i>Brawl</i>); Power of Flight (3DS/Wii U onward)<br/>
           <b>Down:</b> Mirror Shield (<i>Brawl</i>); Guardian Orbitars (3DS/Wii U onward)<br/>
-          <b>Final Smash:</b> Palutena's Army (<i>Brawl</i>); Three Sacred Treasures (3DS/Wii U); Lightning Chariot (<i>Ultimate</i>)</td>
+          <b>Final Smash:</b> Palutena's Army (<i>Brawl</i>); Three Sacred Treasures (3DS/Wii U); Lightning Chariot (<i>Ultimate</i>)
+        </td>
       </tr>
       <tr>
         <td>28ε</td>
