--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1221,11 +1221,11 @@
         <td>Unlockable</td>
         <td>Kid Icarus</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Autoreticle / Explosive Flame (3DS/Wii U) / Heavenly Light (3DS/Wii U)<br/>
+          <b>Side:</b> Reflect Barrier (3DS/Wii U) / Angelic Missle (3DS/Wii U) / Super Speed (3DS/Wii U); Explosive Flame (<i>Ultimate</i>)<br/>
+          <b>Up:</b> Warp / Jump Glide (3DS/Wii U) / Rocket Jump (3DS/Wii U)<br/>
+          <b>Down:</b> Counter (3DS/Wii U) / Lightweight (3DS/Wii U) / Celestial Firework (3DS/Wii U); Counter / Reflect Barrier (<i>Ultimate</i>)<br/>
+          <b>Final Smash:</b> Black Hole Laser
         </td>
       </tr>
       <tr>
