--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1241,11 +1241,11 @@
         <td>Unlockable</td>
         <td>Pac-Man</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Bonus Fruit<br/>
+          <b>Side:</b> Power Pellet<br/>
+          <b>Up:</b> Pac-Jump<br/>
+          <b>Down:</b> Fire Hydrant<br/>
+          <b>Final Smash:</b> Super Pac-Man
         </td>
       </tr>
       <tr>
@@ -1261,11 +1261,11 @@
         <td>Unlockable</td>
         <td>Fire Emblem</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Thunder<br/>
+          <b>Side:</b> Arcfire<br/>
+          <b>Up:</b> Elwind<br/>
+          <b>Down:</b> Nosferatu<br/>
+          <b>Final Smash:</b> Pair Up
         </td>
       </tr>
       <tr>
@@ -1281,11 +1281,11 @@
         <td>Unlockable</td>
         <td>Xenoblade</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Monado Arts<br/>
+          <b>Side:</b> Back Slash<br/>
+          <b>Up:</b> Air Slash<br/>
+          <b>Down:</b> Vision<br/>
+          <b>Final Smash:</b> Chain Attack
         </td>
       </tr>
       <tr>
@@ -1301,11 +1301,11 @@
         <td>Unlockable</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Clown Cannon<br/>
+          <b>Side:</b> Clown Kart Dash<br/>
+          <b>Up:</b> Abandon Ship!<br/>
+          <b>Down:</b> Mechakoopa<br/>
+          <b>Final Smash:</b> Shadow Mario Paint
         </td>
       </tr>
       <tr>
