--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1321,11 +1321,11 @@
         <td>Unlockable</td>
         <td>Duck Hunt</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Trick Shot<br/>
+          <b>Side:</b> Clay Shooting<br/>
+          <b>Up:</b> Duck Jump<br/>
+          <b>Down:</b> Wild Gunman<br/>
+          <b>Final Smash:</b> NES Zapper Posse
         </td>
       </tr>
       <tr>
