--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1341,11 +1341,11 @@
         <td>Unlockable</td>
         <td>Street Fighter</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Hadoken<br/>
+          <b>Side:</b> Tatsumaki Senpukyaku<br/>
+          <b>Up:</b> Shoryuken<br/>
+          <b>Down:</b> Focus Attack<br/>
+          <b>Final Smash:</b> Shin Shoryuken / Shinku Hadoken
         </td>
       </tr>
       <tr>
@@ -1361,11 +1361,11 @@
         <td>Unlockable</td>
         <td>Final Fantasy</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Blade Beam<br/>
+          <b>Side:</b> Cross Slash<br/>
+          <b>Up:</b> Climhazzard<br/>
+          <b>Down:</b> Limit Charge / Finishing Touch<br/>
+          <b>Final Smash:</b> Omnislash
         </td>
       </tr>
       <tr>
@@ -1381,11 +1381,11 @@
         <td>Unlockable</td>
         <td>Fire Emblem</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Dragon Fang Shot<br/>
+          <b>Side:</b> Dragon Lunge<br/>
+          <b>Up:</b> Draconic Ascent<br/>
+          <b>Down:</b> Counter Surge<br/>
+          <b>Final Smash:</b> Torrential Roar
         </td>
       </tr>
       <tr>
