--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1401,11 +1401,11 @@
         <td>Unlockable</td>
         <td>Bayonetta</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Standard:</b> Bullet Climax<br/>
+          <b>Side:</b> Heel Slide / After Burner Kick<br/>
+          <b>Up:</b> Witch Twist<br/>
+          <b>Down:</b> Witch Time<br/>
+          <b>Final Smash:</b> Infernal Climax
         </td>
       </tr>
       <tr>
@@ -1420,6 +1420,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Splatoon</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>65</td>
@@ -1433,6 +1440,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Metroid</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>66</td>
@@ -1446,6 +1460,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Castlevania</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>66ε</td>
@@ -1459,6 +1480,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Castlevania</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>67</td>
@@ -1472,6 +1500,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Donkey Kong</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
     </table>
     <p>See also: <a href="super-smash-bros-trailers.html">Super Smash Bros. Trailers</a></p>
