--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1349,6 +1349,26 @@
         </td>
       </tr>
       <tr>
+        <td>60ε</td>
+        <td><img src="images/Ken.png" alt="Ken"/></td>
+        <td>Ken</td>
+        <td>Super Smash Bros. Ultimate</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Street Fighter</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
+      </tr>
+      <tr>
         <td>61</td>
         <td><img src="images/Cloud.png" alt="Cloud"/></td>
         <td>Cloud</td>
