--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1528,6 +1528,46 @@
           <b>Final Smash:</b> 
         </td>
       </tr>
+      <tr>
+        <td>68</td>
+        <td><img src="images/Isabelle.png" alt="Isabelle"/></td>
+        <td>Isabelle</td>
+        <td>Super Smash Bros. Ultimate</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Animal Crossing</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
+      </tr>
+      <tr>
+        <td>69</td>
+        <td><img src="images/Incineroar.png" alt="Incineroar"/></td>
+        <td>Incineroar</td>
+        <td>Super Smash Bros. Ultimate</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>Unlockable</td>
+        <td>Pokémon</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
+      </tr>
     </table>
     <p>See also: <a href="super-smash-bros-trailers.html">Super Smash Bros. Trailers</a></p>
   </body>
