--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -68,7 +68,7 @@
           <b>Side:</b> Headbutt<br/>
           <b>Up:</b> Spinning Kong<br/>
           <b>Down:</b> Hand Slap<br/>
-          <b>Final Smash:</b> Konga Beat (<i>Brawl</i>, 3DS/Wii U)
+          <b>Final Smash:</b> Konga Beat (<i>Brawl</i>, 3DS/Wii U); Jungle Rush (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -88,7 +88,7 @@
           <b>Side:</b> Boomerang (<i>Melee</i>); Gale Boomerang (<i>Brawl</i>, 3DS/Wii U)<br/>
           <b>Up:</b> Spin Attack<br/>
           <b>Down:</b> Bomb<br/>
-          <b>Final Smash:</b> Triforce Slash (<i>Brawl</i>, 3DS/Wii U)
+          <b>Final Smash:</b> Triforce Slash (<i>Brawl</i>, 3DS/Wii U); Ancient Bow and Arrow (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -148,7 +148,7 @@
           <b>Side:</b> Egg Roll<br/>
           <b>Up:</b> Egg Throw<br/>
           <b>Down:</b> Yoshi Bomb<br/>
-          <b>Final Smash:</b> Super Dragon (<i>Brawl</i>, 3DS/Wii U)
+          <b>Final Smash:</b> Super Dragon (<i>Brawl</i>, 3DS/Wii U); Stampede! (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -188,7 +188,7 @@
           <b>Side:</b> Fox Illusion<br/>
           <b>Up:</b> Fire Fox<br/>
           <b>Down:</b> Reflector<br/>
-          <b>Final Smash:</b> Landmaster (<i>Brawl</i>, 3DS/Wii U)
+          <b>Final Smash:</b> Landmaster (<i>Brawl</i>, 3DS/Wii U); Team Star Fox (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -348,7 +348,7 @@
           <b>Side:</b> Koopa Klaw (<i>Melee</i>); Flying Slam (<i>Brawl</i> onward)<br/>
           <b>Up:</b> Whirling Fortress<br/>
           <b>Down:</b> Bowser Bomb<br/>
-          <b>Final Smash:</b> Giga Bowser
+          <b>Final Smash:</b> Giga Bowser (<i>Brawl</i>, 3DS/Wii U); Giga Bowser Punch (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -385,10 +385,10 @@
         <td>The Legend of Zelda</td>
         <td class="notes">
           <b>Standard:</b> Needle Storm<br/>
-          <b>Side:</b> Chain (<i>Melee</i>, <i>Brawl</i>); Burst Grenade (3DS/Wii U)<br/>
+          <b>Side:</b> Chain (<i>Melee</i>, <i>Brawl</i>); Burst Grenade (3DS/Wii U onward)<br/>
           <b>Up:</b> Vanish<br/>
-          <b>Down:</b> Transform (<i>Melee</i>, <i>Brawl</i>); Bouncing Fish (3DS/Wii U)<br/>
-          <b>Final Smash:</b> Light Arrow(<i>Brawl</i>, 3DS/Wii U)
+          <b>Down:</b> Transform (<i>Melee</i>, <i>Brawl</i>); Bouncing Fish (3DS/Wii U onward)<br/>
+          <b>Final Smash:</b> Light Arrow (<i>Brawl</i>, 3DS/Wii U); Sheikah Dance (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -448,7 +448,7 @@
           <b>Side:</b> Skull Bash<br/>
           <b>Up:</b> Agility<br/>
           <b>Down:</b> Thunder<br/>
-          <b>Final Smash:</b> 
+          <b>Final Smash:</b> Volt Tackle
         </td>
       </tr>
       <tr>
@@ -468,7 +468,7 @@
           <b>Side:</b> Falco Phantasm<br/>
           <b>Up:</b> Fire Bird<br/>
           <b>Down:</b> Reflector<br/>
-          <b>Final Smash:</b> Landmaster (<i>Brawl</i>, 3DS/Wii U)
+          <b>Final Smash:</b> Landmaster (<i>Brawl</i>, 3DS/Wii U); Team Star Fox (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
