--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1350,7 +1350,7 @@
       </tr>
       <tr>
         <td>60ε</td>
-        <td><img src="images/120px-Ken_SSBU.png" alt="Ken"/></td>
+        <td><img src="images/Ken.png" alt="Ken"/></td>
         <td>Ken</td>
         <td>Super Smash Bros. Ultimate</td>
         <td>N/A</td>
@@ -1530,7 +1530,7 @@
       </tr>
       <tr>
         <td>68</td>
-        <td><img src="images/120px-Isabelle.png" alt="Isabelle"/></td>
+        <td><img src="images/Isabelle.png" alt="Isabelle"/></td>
         <td>Isabelle</td>
         <td>Super Smash Bros. Ultimate</td>
         <td>N/A</td>
@@ -1550,7 +1550,7 @@
       </tr>
       <tr>
         <td>69</td>
-        <td><img src="images/120px-Incineroar.png" alt="Incineroar"/></td>
+        <td><img src="images/Incineroar.png" alt="Incineroar"/></td>
         <td>Incineroar</td>
         <td>Super Smash Bros. Ultimate</td>
         <td>N/A</td>
