--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -84,10 +84,10 @@
         <td>Default</td>
         <td>The Legend of Zelda</td>
         <td class="notes">
-          <b>Standard:</b> Boomerang (64); Bow (<i>Melee</i>); Hero's Bow (<i>Brawl</i> onward)<br/>
-          <b>Side:</b> Boomerang (<i>Melee</i>); Gale Boomerang (<i>Brawl</i>, 3DS/Wii U)<br/>
+          <b>Standard:</b> Boomerang (64); Bow (<i>Melee</i>); Hero's Bow (<i>Brawl</i>); Bow and Arrows (<i>Ultimate</i>)<br/>
+          <b>Side:</b> Boomerang (<i>Melee</i>, <i>Ultimate</i>); Gale Boomerang (<i>Brawl</i>, 3DS/Wii U)<br/>
           <b>Up:</b> Spin Attack<br/>
-          <b>Down:</b> Bomb<br/>
+          <b>Down:</b> Bomb (64, <i>Melee</i>, <i>Brawl</i>, 3DS/Wii U); Remote Bomb (<i>Ultimate</i>)<br/>
           <b>Final Smash:</b> Triforce Slash (<i>Brawl</i>, 3DS/Wii U); Ancient Bow and Arrow (<i>Ultimate</i>)
         </td>
       </tr>
@@ -228,7 +228,7 @@
           <b>Side:</b> Green Missle<br/>
           <b>Up:</b> Super Jump Punch<br/>
           <b>Down:</b> Luigi Cyclone<br/>
-          <b>Final Smash:</b> Negative Zone (<i>Brawl</i>); Poltergust 5000 (3DS/Wii U)
+          <b>Final Smash:</b> Negative Zone (<i>Brawl</i>); Poltergust 5000 (3DS/Wii U); Poltergust G-00 (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -528,7 +528,7 @@
           <b>Side:</b> Boomerang<br/>
           <b>Up:</b> Spin Attack<br/>
           <b>Down:</b> Bomb<br/>
-          <b>Final Smash:</b> 
+          <b>Final Smash:</b> Triforce Slash
         </td>
       </tr>
       <tr>
@@ -548,7 +548,7 @@
           <b>Side:</b> Gerudo Dragon (<i>Melee</i>); Flame Choke (<i>Brawl</i> onward)<br/>
           <b>Up:</b> Dark Dive<br/>
           <b>Down:</b> Wozard's Foot<br/>
-          <b>Final Smash:</b> Beast Ganon (<i>Brawl</i>, 3DS/Wii U); Demon King Ganon (<i>Ultimate</i>)
+          <b>Final Smash:</b> Beast Ganon (<i>Brawl</i>, 3DS/Wii U); Ganon, The Demon King (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
