--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -84,7 +84,7 @@
         <td>Default</td>
         <td>The Legend of Zelda</td>
         <td class="notes">
-          <b>Standard:</b> Boomerang (64); Bow (<i>Melee</i>); Hero's Bow (<i>Brawl</i>); Bow and Arrows (<i>Ultimate</i>)<br/>
+          <b>Standard:</b> Boomerang (64); Bow (<i>Melee</i>); Hero's Bow (<i>Brawl</i>, 3DS/Wii U); Bow and Arrows (<i>Ultimate</i>)<br/>
           <b>Side:</b> Boomerang (<i>Melee</i>, <i>Ultimate</i>); Gale Boomerang (<i>Brawl</i>, 3DS/Wii U)<br/>
           <b>Up:</b> Spin Attack<br/>
           <b>Down:</b> Bomb (64, <i>Melee</i>, <i>Brawl</i>, 3DS/Wii U); Remote Bomb (<i>Ultimate</i>)<br/>
@@ -708,7 +708,7 @@
           <b>Side:</b> Plasma Whip<br/>
           <b>Up:</b> Plasma Wire (<i>Brawl</i>); Boost Kick (3DS/Wii U onward)<br/>
           <b>Down:</b> Flip Jump<br/>
-          <b>Final Smash:</b> Power Suit Samus (<i>Brawl</i>); Gunship (3DS/Wii U)
+          <b>Final Smash:</b> Power Suit Samus (<i>Brawl</i>); Gunship (3DS/Wii U); Zero Laser (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
