--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -748,7 +748,7 @@
           <b>Side:</b> Remote Controlled Missle<br/>
           <b>Up:</b> Cypher<br/>
           <b>Down:</b> C4<br/>
-          <b>Final Smash:</b> Grenade Launcher
+          <b>Final Smash:</b> Grenade Launcher (<i>Brawl</i>); Covering Fire (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -845,7 +845,7 @@
           <b>Side:</b> Rock Smash (<i>Brawl</i>); Flare Blitz (3DS/Wii U onward)<br/>
           <b>Up:</b> Fly<br/>
           <b>Down:</b> Pokémon Change (<i>Brawl</i>, <i>Ultimate</i>); Rock Smash (3DS/Wii U)<br/>
-          <b>Final Smash:</b> Triple Finish (<i>Brawl</i>, <i>Ultimate</i>); Mega Evolution (3DS/Wii U)
+          <b>Final Smash:</b> Triple Finish (<i>Brawl</i>, <i>Ultimate</i>); Mega Charizard X (3DS/Wii U)
         </td>
       </tr>
       <tr>
@@ -865,7 +865,7 @@
           <b>Side:</b> Monkey Flip<br/>
           <b>Up:</b> Rocketbarrel Boost<br/>
           <b>Down:</b> Banana Peel<br/>
-          <b>Final Smash:</b> Rocketbarrel Barrage
+          <b>Final Smash:</b> Rocketbarrel Barrage (<i>Brawl</i>, 3DS/Wii U); Hyper Rocketbarrel (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -925,7 +925,7 @@
           <b>Side:</b> Waddle Dee Throw (<i>Brawl</i>); Gordo Throw (3DS/Wii U)<br/>
           <b>Up:</b> Super Dedede Jump<br/>
           <b>Down:</b> Jet Hammer<br/>
-          <b>Final Smash:</b> Waddle Dee Army (<i>Brawl</i>); Dedede Burst (3DS/Wii U)
+          <b>Final Smash:</b> Waddle Dee Army (<i>Brawl</i>); Dedede Burst (3DS/Wii U); Dede-Rush (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -965,7 +965,7 @@
           <b>Side:</b> Force Palm<br/>
           <b>Up:</b> Extreme Speed<br/>
           <b>Down:</b> Double Team<br/>
-          <b>Final Smash:</b> Aura Storm (<i>Brawl</i>); Mega Evolution (3DS/Wii U)
+          <b>Final Smash:</b> Aura Storm (<i>Brawl</i>, <i>Ultimate</i>); Mega Lucario (3DS/Wii U)
         </td>
       </tr>
       <tr>
@@ -985,7 +985,7 @@
           <b>Side:</b> Arm Rotor<br/>
           <b>Up:</b> Robo Burner<br/>
           <b>Down:</b> Gyro<br/>
-          <b>Final Smash:</b> Diffusion Beam (<i>Brawl</i>); Super Diffusion Beam (3DS/Wii U)
+          <b>Final Smash:</b> Diffusion Beam (<i>Brawl</i>); Super Diffusion Beam (3DS/Wii U); Guided Robo Beam (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -1025,7 +1025,7 @@
           <b>Side:</b> Wolf Flash<br/>
           <b>Up:</b> Fire Wolf<br/>
           <b>Down:</b> Reflector<br/>
-          <b>Final Smash:</b> Landmaster (<i>Brawl</i>)
+          <b>Final Smash:</b> Landmaster (<i>Brawl</i>); Team Star Wolf (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
