--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1105,7 +1105,7 @@
           <b>Side:</b> Star Bits<br/>
           <b>Up:</b> Launch Star<br/>
           <b>Down:</b> Gravitational Pull<br/>
-          <b>Final Smash:</b> Power Star
+          <b>Final Smash:</b> Power Star (3DS/Wii U); Grand Star (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
@@ -1125,7 +1125,7 @@
           <b>Side:</b> Jolt Haymaker<br/>
           <b>Up:</b> Rising Uppercut<br/>
           <b>Down:</b> Slip Counter<br/>
-          <b>Final Smash:</b> Giga Mac
+          <b>Final Smash:</b> Giga Mac (3DS/Wii U); Giga Mac Rush (<i>Ultimate</i>)
         </td>
       </tr>
       <tr>
