--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -44,7 +44,7 @@
         <td>Default</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Standard:</b> Fireball<br/>
+          <b>Neutral:</b> Fireball<br/>
           <b>Side:</b> Cape<br/>
           <b>Up:</b> Super Jump Punch<br/>
           <b>Down:</b> Mario Tornado (64, <i>Melee</i>); F.L.U.D.D. (<i>Brawl</i> onward)<br/>
@@ -64,7 +64,7 @@
         <td>Default</td>
         <td>Donkey Kong</td>
         <td class="notes">
-          <b>Standard:</b> Giant Punch<br/>
+          <b>Neutral:</b> Giant Punch<br/>
           <b>Side:</b> Headbutt<br/>
           <b>Up:</b> Spinning Kong<br/>
           <b>Down:</b> Hand Slap<br/>
@@ -84,7 +84,7 @@
         <td>Default</td>
         <td>The Legend of Zelda</td>
         <td class="notes">
-          <b>Standard:</b> Boomerang (64); Bow (<i>Melee</i>); Hero's Bow (<i>Brawl</i>, 3DS/Wii U); Bow and Arrows (<i>Ultimate</i>)<br/>
+          <b>Neutral:</b> Boomerang (64); Bow (<i>Melee</i>); Hero's Bow (<i>Brawl</i>, 3DS/Wii U); Bow and Arrows (<i>Ultimate</i>)<br/>
           <b>Side:</b> Boomerang (<i>Melee</i>, <i>Ultimate</i>); Gale Boomerang (<i>Brawl</i>, 3DS/Wii U)<br/>
           <b>Up:</b> Spin Attack<br/>
           <b>Down:</b> Bomb (64, <i>Melee</i>, <i>Brawl</i>, 3DS/Wii U); Remote Bomb (<i>Ultimate</i>)<br/>
@@ -104,7 +104,7 @@
         <td>Default</td>
         <td>Metroid</td>
         <td class="notes">
-          <b>Standard:</b> Charge Shot<br/>
+          <b>Neutral:</b> Charge Shot<br/>
           <b>Side:</b> Missle<br/>
           <b>Up:</b> Screw Attack<br/>
           <b>Down:</b> Bomb<br/>
@@ -124,11 +124,11 @@
         <td>Unlockable</td>
         <td>Metroid</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Charge Shot<br/>
+          <b>Side:</b> Missle<br/>
+          <b>Up:</b> Screw Attack<br/>
+          <b>Down:</b> Bomb<br/>
+          <b>Final Smash:</b> Phazon Laser
         </td>
       </tr>
       <tr>
@@ -144,7 +144,7 @@
         <td>Default</td>
         <td>Yoshi</td>
         <td class = "notes">
-          <b>Standard:</b> Egg Lay<br/>
+          <b>Neutral:</b> Egg Lay<br/>
           <b>Side:</b> Egg Roll<br/>
           <b>Up:</b> Egg Throw<br/>
           <b>Down:</b> Yoshi Bomb<br/>
@@ -164,7 +164,7 @@
         <td>Default</td>
         <td>Kirby</td>
         <td class="notes">
-          <b>Standard:</b> Inhale<br/>
+          <b>Neutral:</b> Inhale<br/>
           <b>Side:</b> Hammer (<i>Melee</i>, <i>Brawl</i>); Hammer Flip (3DS/Wii U onward)<br/>
           <b>Up:</b> Final Cutter<br/>
           <b>Down:</b> Stone<br/>
@@ -184,7 +184,7 @@
         <td>Default</td>
         <td>Star Fox</td>
         <td class="notes">
-          <b>Standard:</b> Blaster<br/>
+          <b>Neutral:</b> Blaster<br/>
           <b>Side:</b> Fox Illusion<br/>
           <b>Up:</b> Fire Fox<br/>
           <b>Down:</b> Reflector<br/>
@@ -204,7 +204,7 @@
         <td>Default</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> Thunder Jolt<br/>
+          <b>Neutral:</b> Thunder Jolt<br/>
           <b>Side:</b> Skull Bash<br/>
           <b>Up:</b> Quick Attack<br/>
           <b>Down:</b> Thunder<br/>
@@ -224,7 +224,7 @@
         <td>Unlockable</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Standard:</b> Fireball<br/>
+          <b>Neutral:</b> Fireball<br/>
           <b>Side:</b> Green Missle<br/>
           <b>Up:</b> Super Jump Punch<br/>
           <b>Down:</b> Luigi Cyclone<br/>
@@ -244,7 +244,7 @@
         <td>Unlockable</td>
         <td>EarthBound</td>
         <td class="notes">
-          <b>Standard:</b> PK Fire (64); PK Flash (<i>Melee</i> onward)<br/>
+          <b>Neutral:</b> PK Fire (64); PK Flash (<i>Melee</i> onward)<br/>
           <b>Side:</b> PK Fire<br/>
           <b>Up:</b> PK Thunder<br/>
           <b>Down:</b> PSI Magnet<br/>
@@ -264,7 +264,7 @@
         <td>Unlockable</td>
         <td>F-Zero</td>
         <td class="notes">
-          <b>Standard:</b> Falcon Punch<br/>
+          <b>Neutral:</b> Falcon Punch<br/>
           <b>Side:</b> Raptor Boost<br/>
           <b>Up:</b> Falcon Dive<br/>
           <b>Down:</b> Falcon Kick<br/>
@@ -284,7 +284,7 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> Pound (64); Rollout (<i>Melee</i> onward)<br/>
+          <b>Neutral:</b> Pound (64); Rollout (<i>Melee</i> onward)<br/>
           <b>Side:</b> Pound<br/>
           <b>Up:</b> Sing<br/>
           <b>Down:</b> Rest<br/>
