--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -304,7 +304,7 @@
         <td>Unlockable</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Standard:</b> Toad<br/>
+          <b>Neutral:</b> Toad<br/>
           <b>Side:</b> Peach Bomber<br/>
           <b>Up:</b> Peach Parasol<br/>
           <b>Down:</b> Vegetable<br/>
@@ -324,7 +324,7 @@
         <td>Unlockable</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
+          <b>Neutral:</b> <br/>
           <b>Side:</b> <br/>
           <b>Up:</b> <br/>
           <b>Down:</b> <br/>
@@ -344,7 +344,7 @@
         <td>Unlockable</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Standard:</b> Fire Breath<br/>
+          <b>Neutral:</b> Fire Breath<br/>
           <b>Side:</b> Koopa Klaw (<i>Melee</i>); Flying Slam (<i>Brawl</i> onward)<br/>
           <b>Up:</b> Whirling Fortress<br/>
           <b>Down:</b> Bowser Bomb<br/>
@@ -364,7 +364,7 @@
         <td>Unlockable</td>
         <td>Ice Climber</td>
         <td class="notes">
-          <b>Standard:</b> Ice Shot<br/>
+          <b>Neutral:</b> Ice Shot<br/>
           <b>Side:</b> Squall Hammer<br/>
           <b>Up:</b> Belay<br/>
           <b>Down:</b> Blizzard<br/>
@@ -384,7 +384,7 @@
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
         <td class="notes">
-          <b>Standard:</b> Needle Storm<br/>
+          <b>Neutral:</b> Needle Storm<br/>
           <b>Side:</b> Chain (<i>Melee</i>, <i>Brawl</i>); Burst Grenade (3DS/Wii U onward)<br/>
           <b>Up:</b> Vanish<br/>
           <b>Down:</b> Transform (<i>Melee</i>, <i>Brawl</i>); Bouncing Fish (3DS/Wii U onward)<br/>
@@ -404,7 +404,7 @@
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
         <td class="notes">
-          <b>Standard:</b> Nayru's Love<br/>
+          <b>Neutral:</b> Nayru's Love<br/>
           <b>Side:</b> Din's Fire<br/>
           <b>Up:</b> Farore's Wind<br/>
           <b>Down:</b> Transform (<i>Melee</i>, <i>Brawl</i>); Phantom Slash (3DS/Wii U onward)<br/>
@@ -424,7 +424,7 @@
         <td>Unlockable</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Standard:</b> Megavitamins<br/>
+          <b>Neutral:</b> Megavitamins<br/>
           <b>Side:</b> Super Sheet<br/>
           <b>Up:</b> Super Jump Punch<br/>
           <b>Down:</b> Dr. Tornado<br/>
@@ -444,7 +444,7 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> Thunder Jolt<br/>
+          <b>Neutral:</b> Thunder Jolt<br/>
           <b>Side:</b> Skull Bash<br/>
           <b>Up:</b> Agility<br/>
           <b>Down:</b> Thunder<br/>
@@ -464,7 +464,7 @@
         <td>Unlockable</td>
         <td>Star Fox</td>
         <td class="notes">
-          <b>Standard:</b> Blaster<br/>
+          <b>Neutral:</b> Blaster<br/>
           <b>Side:</b> Falco Phantasm<br/>
           <b>Up:</b> Fire Bird<br/>
           <b>Down:</b> Reflector<br/>
@@ -484,7 +484,7 @@
         <td>Unlockable</td>
         <td>Fire Emblem</td>
         <td class="notes">
-          <b>Standard:</b> Sheild Breaker<br/>
+          <b>Neutral:</b> Sheild Breaker<br/>
           <b>Side:</b> Dancing Blade<br/>
           <b>Up:</b> Doplin Slash<br/>
           <b>Down:</b> Counter<br/>
@@ -504,7 +504,7 @@
         <td>Unlockable</td>
         <td>Fire Emblem</td>
         <td class="notes">
-          <b>Standard:</b> Sheild Breaker<br/>
+          <b>Neutral:</b> Sheild Breaker<br/>
           <b>Side:</b> Dancing Blade<br/>
           <b>Up:</b> Doplin Slash<br/>
           <b>Down:</b> Counter<br/>
@@ -524,7 +524,7 @@
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
         <td class="notes">
-          <b>Standard:</b> Fire Bow<br/>
+          <b>Neutral:</b> Fire Bow<br/>
           <b>Side:</b> Boomerang<br/>
           <b>Up:</b> Spin Attack<br/>
           <b>Down:</b> Bomb<br/>
@@ -544,7 +544,7 @@
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
         <td class="notes">
-          <b>Standard:</b> Warlock Punch<br/>
+          <b>Neutral:</b> Warlock Punch<br/>
           <b>Side:</b> Gerudo Dragon (<i>Melee</i>); Flame Choke (<i>Brawl</i> onward)<br/>
           <b>Up:</b> Dark Dive<br/>
           <b>Down:</b> Wozard's Foot<br/>
@@ -564,7 +564,7 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> Shadow Ball<br/>
+          <b>Neutral:</b> Shadow Ball<br/>
           <b>Side:</b> Confusion<br/>
           <b>Up:</b> Teleport<br/>
           <b>Down:</b> Disable<br/>
@@ -584,7 +584,7 @@
         <td>Unlockable</td>
         <td>Fire Emblem</td>
         <td class="notes">
-          <b>Standard:</b> Flare Blade<br/>
+          <b>Neutral:</b> Flare Blade<br/>
           <b>Side:</b> Double-Edge Dance<br/>
           <b>Up:</b> Blazer<br/>
           <b>Down:</b> Counter<br/>
@@ -604,7 +604,7 @@
         <td>Unlockable</td>
         <td>Fire Emblem</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
+          <b>Neutral:</b> <br/>
           <b>Side:</b> <br/>
           <b>Up:</b> <br/>
           <b>Down:</b> <br/>
@@ -624,7 +624,7 @@
         <td>Unlockable</td>
         <td>Game & Watch</td>
         <td class="notes">
-          <b>Standard:</b> Chef<br/>
+          <b>Neutral:</b> Chef<br/>
           <b>Side:</b> Judge<br/>
           <b>Up:</b> Fire<br/>
           <b>Down:</b> Oil Panic<br/>
@@ -644,7 +644,7 @@
         <td>Unlockable</td>
         <td>Kirby</td>
         <td class="notes">
-          <b>Standard:</b> Mach Tornado<br/>
+          <b>Neutral:</b> Mach Tornado<br/>
           <b>Side:</b> Drill Rush<br/>
           <b>Up:</b> Shuttle Loop<br/>
           <b>Down:</b> Dimensional Cape<br/>
@@ -664,7 +664,7 @@
         <td>Unlockable</td>
         <td>Kid Icarus</td>
         <td class="notes">
-          <b>Standard:</b> Palutena's Arrow (<i>Brawl</i>); Palutena Bow (3DS/Wii U)<br/>
+          <b>Neutral:</b> Palutena Bow<br/>
           <b>Side:</b> Angel Ring (<i>Brawl</i>); Upperdash Arm (3DS/Wii U onward)<br/>
           <b>Up:</b> Wings of Icarus (<i>Brawl</i>); Power of Flight (3DS/Wii U onward)<br/>
           <b>Down:</b> Mirror Shield (<i>Brawl</i>); Guardian Orbitars (3DS/Wii U onward)<br/>
@@ -684,7 +684,7 @@
         <td>Unlockable</td>
         <td>Kid Icarus</td>
         <td class="notes">
-          <b>Standard:</b> Silver Bow<br/>
+          <b>Neutral:</b> Silver Bow<br/>
           <b>Side:</b> Electroshock Arm<br/>
           <b>Up:</b> Power of Flight<br/>
           <b>Down:</b> Guardian Orbitars<br/>
@@ -704,7 +704,7 @@
         <td>Unlockable</td>
         <td>Metroid</td>
         <td class="notes">
-          <b>Standard:</b> Paralyzer<br/>
+          <b>Neutral:</b> Paralyzer<br/>
           <b>Side:</b> Plasma Whip<br/>
           <b>Up:</b> Plasma Wire (<i>Brawl</i>); Boost Kick (3DS/Wii U onward)<br/>
           <b>Down:</b> Flip Jump<br/>
@@ -724,7 +724,7 @@
         <td>Unlockable</td>
         <td>Wario</td>
         <td class="notes">
-          <b>Standard:</b> Chomp<br/>
+          <b>Neutral:</b> Chomp<br/>
           <b>Side:</b> Wario Bike<br/>
           <b>Up:</b> Corkscrew<br/>
           <b>Down:</b> Wario Waft<br/>
@@ -744,7 +744,7 @@
         <td>Unlockable</td>
         <td>Metal Gear</td>
         <td class="notes">
-          <b>Standard:</b> Hand Grenade<br/>
+          <b>Neutral:</b> Hand Grenade<br/>
           <b>Side:</b> Remote Controlled Missle<br/>
           <b>Up:</b> Cypher<br/>
           <b>Down:</b> C4<br/>
@@ -764,7 +764,7 @@
         <td>Unlockable</td>
         <td>Fire Emblem</td>
         <td class="notes">
-          <b>Standard:</b> Eruption<br/>
+          <b>Neutral:</b> Eruption<br/>
           <b>Side:</b> Quick Draw<br/>
           <b>Up:</b> Aether<br/>
           <b>Down:</b> Counter<br/>
@@ -801,7 +801,7 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> Water Gun<br/>
+          <b>Neutral:</b> Water Gun<br/>
           <b>Side:</b> Withdraw<br/>
           <b>Up:</b> Waterfall<br/>
           <b>Down:</b> Pokémon Change<br/>
@@ -821,7 +821,7 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> Bullet Seed<br/>
+          <b>Neutral:</b> Bullet Seed<br/>
           <b>Side:</b> Razor Leaf<br/>
           <b>Up:</b> Vine Whip<br/>
           <b>Down:</b> Pokémon Change<br/>
@@ -841,7 +841,7 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> Flamethrower<br/>
+          <b>Neutral:</b> Flamethrower<br/>
           <b>Side:</b> Rock Smash (<i>Brawl</i>); Flare Blitz (3DS/Wii U onward)<br/>
           <b>Up:</b> Fly<br/>
           <b>Down:</b> Pokémon Change (<i>Brawl</i>, <i>Ultimate</i>); Rock Smash (3DS/Wii U)<br/>
@@ -861,7 +861,7 @@
         <td>Unlockable</td>
         <td>Donkey Kong</td>
         <td class="notes">
-          <b>Standard:</b> Peanut Popgun<br/>
+          <b>Neutral:</b> Peanut Popgun<br/>
           <b>Side:</b> Monkey Flip<br/>
           <b>Up:</b> Rocketbarrel Boost<br/>
           <b>Down:</b> Banana Peel<br/>
@@ -881,7 +881,7 @@
         <td>Unlockable</td>
         <td>Lucas</td>
         <td class="notes">
-          <b>Standard:</b> PK Freeze<br/>
+          <b>Neutral:</b> PK Freeze<br/>
           <b>Side:</b> PK Fire<br/>
           <b>Up:</b> PK Thunder<br/>
           <b>Down:</b> PSI Magnet<br/>
@@ -901,7 +901,7 @@
         <td>Unlockable</td>
         <td>Sonic</td>
         <td class="notes">
-          <b>Standard:</b> Homing Attack<br/>
+          <b>Neutral:</b> Homing Attack<br/>
           <b>Side:</b> Spin Dash<br/>
           <b>Up:</b> Spring Jump<br/>
           <b>Down:</b> Spin Charge<br/>
@@ -921,8 +921,8 @@
         <td>Unlockable</td>
         <td>Kirby</td>
         <td class="notes">
-          <b>Standard:</b> Inhale<br/>
-          <b>Side:</b> Waddle Dee Throw (<i>Brawl</i>); Gordo Throw (3DS/Wii U)<br/>
+          <b>Neutral:</b> Inhale<br/>
+          <b>Side:</b> Waddle Dee Throw (<i>Brawl</i>); Gordo Throw (3DS/Wii U onward)<br/>
           <b>Up:</b> Super Dedede Jump<br/>
           <b>Down:</b> Jet Hammer<br/>
           <b>Final Smash:</b> Waddle Dee Army (<i>Brawl</i>); Dedede Burst (3DS/Wii U); Dede-Rush (<i>Ultimate</i>)
@@ -941,7 +941,7 @@
         <td>Unlockable</td>
         <td>Pikmin</td>
         <td class="notes">
-          <b>Standard:</b> Pikmin Pluck<br/>
+          <b>Neutral:</b> Pikmin Pluck<br/>
           <b>Side:</b> Pikmin Throw<br/>
           <b>Up:</b> Pikmin Chain (<i>Brawl</i>); Winged Pikmin (3DS/Wii U onward)<br/>
           <b>Down:</b> Pikmin Order<br/>
@@ -961,7 +961,7 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> Aura Sphere<br/>
+          <b>Neutral:</b> Aura Sphere<br/>
           <b>Side:</b> Force Palm<br/>
           <b>Up:</b> Extreme Speed<br/>
           <b>Down:</b> Double Team<br/>
@@ -981,7 +981,7 @@
         <td>Unlockable</td>
         <td>R.O.B.</td>
         <td class="notes">
-          <b>Standard:</b> Robo Beam<br/>
+          <b>Neutral:</b> Robo Beam<br/>
           <b>Side:</b> Arm Rotor<br/>
           <b>Up:</b> Robo Burner<br/>
           <b>Down:</b> Gyro<br/>
@@ -1001,7 +1001,7 @@
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
         <td class="notes">
-          <b>Standard:</b> Hero's Bow<br/>
+          <b>Neutral:</b> Hero's Bow<br/>
           <b>Side:</b> Boomerang<br/>
           <b>Up:</b> Spin Attack<br/>
           <b>Down:</b> Bomb<br/>
@@ -1021,7 +1021,7 @@
         <td>Unlockable</td>
         <td>Star Fox</td>
         <td class="notes">
-          <b>Standard:</b> Blaster<br/>
+          <b>Neutral:</b> Blaster<br/>
           <b>Side:</b> Wolf Flash<br/>
           <b>Up:</b> Fire Wolf<br/>
           <b>Down:</b> Reflector<br/>
